--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,195 +7,119 @@
     tools:context=".SignUpActivity">
 
     <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="138dp"
-            android:orientation="horizontal">
+        <Button
+            android:id="@+id/backButton"
+            android:layout_width="15dp"
+            android:layout_height="30dp"
+            android:layout_weight="1"
+            android:background="@android:drawable/ic_menu_close_clear_cancel"
+            android:backgroundTint="@color/colorAccent"
+            android:minWidth="10dp"
+            android:minHeight="10dp"
+            android:textSize="8sp" />
 
-            <Button
-                android:id="@+id/backButton"
-                android:layout_width="54dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_weight="1"
-                android:background="@drawable/abc_vector_test"
-                android:backgroundTint="@color/colorAccent" />
-
-            <ImageView
-                android:id="@+id/logoImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="90dp"
-                android:layout_weight="60"
-                app:srcCompat="@drawable/logotipo" />
-
-        </LinearLayout>
-
-        <LinearLayout
+        <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="55dp"
-            android:orientation="horizontal"
-            android:visibility="visible">
+            android:layout_weight="1" />
 
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            app:srcCompat="@drawable/logotipo" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:orientation="vertical">
+    </LinearLayout>
 
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp" />
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="20dp"
+        android:layout_weight="3"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
-                <TextView
-                    android:id="@+id/titleTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Datos Personales"
-                    android:textAlignment="center "
-                    android:textAllCaps="false"
-                    android:textSize="30sp" />
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp" />
-
-                <EditText
-                    android:id="@+id/nameEditText"
-                    android:layout_width="300dp"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="#F57C00"
-                    android:ems="10"
-                    android:gravity="center_horizontal"
-                    android:hint="Nombres"
-                    android:inputType="textPersonName" />
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp" />
-
-                <EditText
-                    android:id="@+id/lastNameEditText"
-                    android:layout_width="300dp"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="#F57C00"
-                    android:ems="10"
-                    android:gravity="center_horizontal"
-                    android:hint="Apellidos"
-                    android:inputType="textPersonName" />
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp" />
-
-                <EditText
-                    android:id="@+id/birthEditTextDate"
-                    android:layout_width="300dp"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="#F57C00"
-                    android:ems="10"
-                    android:gravity="center_horizontal"
-                    android:hint="Fecha de Nacimiento"
-                    android:inputType="date" />
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp" />
-
-                <Spinner
-                    android:id="@+id/genderSpinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="#FFA000" />
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <Space
-                        android:layout_width="20dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
-                    <Button
-                        android:id="@+id/backSingUpButton"
-                        android:layout_width="51dp"
-                        android:layout_height="33dp"
-                        android:layout_weight="1"
-                        android:background="@drawable/abc_vector_test"
-                        android:backgroundTint="#F57C00"
-                        android:visibility="invisible" />
-
-                    <Space
-                        android:layout_width="20dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
-                    <TextView
-                        android:id="@+id/pageTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="1/3"
-                        android:textSize="18sp" />
-
-                    <Space
-                        android:layout_width="20dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
-
-                    <Button
-                        android:id="@+id/nextButton"
-                        android:layout_width="51dp"
-                        android:layout_height="33dp"
-                        android:layout_weight="1"
-                        android:background="@android:drawable/ic_media_play"
-                        android:backgroundTint="#F57C00" />
-
-                    <Space
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_weight="1" />
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/titleTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Datos Personales"
+            android:textAlignment="center "
+            android:textAllCaps="false"
+            android:textSize="30sp" />
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="102dp" />
+            android:layout_height="40dp" />
 
-        <TextView
-            android:id="@+id/TextView"
-            android:layout_width="235dp"
+        <EditText
+            android:id="@+id/nameEditText"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="110dp"
-            android:text="Developed by ThreeSmiles" />
+            android:backgroundTint="#F57C00"
+            android:ems="10"
+            android:gravity="center_horizontal"
+            android:hint="Nombres"
+            android:inputType="textPersonName" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+
+        <EditText
+            android:id="@+id/lastNameEditText"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#F57C00"
+            android:ems="10"
+            android:gravity="center_horizontal"
+            android:hint="Apellidos"
+            android:inputType="textPersonName" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+
+        <EditText
+            android:id="@+id/birthEditTextDate"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#F57C00"
+            android:ems="10"
+            android:gravity="center_horizontal"
+            android:hint="Fecha de Nacimiento"
+            android:inputType="date" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+
+        <Spinner
+            android:id="@+id/genderSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FFA000" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="50dp" />
 
     </LinearLayout>
 
