--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -135,13 +135,27 @@
             android:layout_width="match_parent"
             android:layout_height="20dp" />
 
+        <TextView
+            android:id="@+id/spinnerTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Seleccione su nacionalidad"
+            android:layout_gravity="center"
+
+        />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />
+
         <Spinner
             android:id="@+id/countrySpinner"
             android:layout_width="match_parent"
-            android:spinnerMode="dialog"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorAccent"
-            android:textAlignment="center" />
+            android:spinnerMode="dialog"
+            android:layout_gravity="center"
+            android:prompt="@string/select_country"
+            />
 
         <Space
             android:layout_width="match_parent"
