--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -98,6 +98,11 @@
             android:text="¿Nuevo en trabajitos?"
             android:textAlignment="viewEnd" />
 
+        <Space
+            android:layout_width="20dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
         <Button
             android:id="@+id/sUpButton"
             android:layout_width="wrap_content"
