--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -48,8 +48,8 @@
 
             <ImageButton
                 android:id="@+id/imageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="149dp"
+                android:layout_height="126dp"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/usuario" />
 
