--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -532,7 +532,7 @@
             app:layout_constraintTop_toBottomOf="@+id/docsLayout" >
 
             <Button
-                android:id="@+id/sedButton"
+                android:id="@+id/sendButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
